# pysynic

./: README.md  pyproject.toml
pysynic/: synthetic_data.py
test/: test_synthetic_data.py
