[project]
name = "pysynic"
version = "0.0.3"
description = "Helps to generated synthetic data that can be used to test ML models etc"
authors = [
  { name = "Phillip Henry", email = "londonjavaman@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/phillhenry/pysynic/"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
